<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity"
                android:id="@+id/loginParent">

    <ImageView
        android:id="@+id/loginLogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/logo_image_view_description"
        android:src="@drawable/logo100dpi"/>

    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginLogoImageView"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/login_edit_text_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginUsernameEditText"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password_text_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginLoginButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginPasswordEditText"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_marginTop="20dp"
        android:onClick="loginButtonClicked"
        android:text="@string/login_button_text"/>

    <Button
        android:id="@+id/loginGuestLoginButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/loginLoginButton"
        android:layout_marginTop="20dp"
        android:onClick="guestLoginButtonClicked"
        android:text="@string/guest_login_button_text"/>

    <Button
        android:id="@+id/loginRegisterButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginGuestLoginButton"
        android:layout_alignParentStart="true"
        android:onClick="registerButtonClicked"
        android:text="@string/register_button_text"/>

</RelativeLayout>
