<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false"
              android:orientation="vertical"
              tools:context="pl.edu.uj.jadebusem.EditScheduleActivity"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:id="@+id/editParent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editNameEditText"
            android:hint="@string/edit_schedule_name_edit_text_hint"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_add_tracepoint_button_text"
            android:id="@+id/editAddTracepointButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:onClick="addTracepointButtonClicked"/>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/editTracepointsListView"
            android:layout_below="@+id/editNameEditText"
            android:layout_above="@id/editAddTracepointButton"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_add_departure_button_text"
            android:id="@+id/editAddDepartureButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:onClick="addDepartureButtonClicked"/>

        <TabHost
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/editAddDepartureButton"
            android:id="@+id/editTabHost">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:id="@+id/editMON"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTimeMonListView" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/editTUE"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTimeTueListView" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/editWED"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTimeWedListView" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/editTHU"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTimeThuListView" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/editFRI"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTimeFriListView" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/editSAT"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTimeSatListView" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/editSUN"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTimeSunListView" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </RelativeLayout>

</LinearLayout>
